pdp cls fix | header overlap attempt

--- a/dev/scss/sections/_main-product.scss
+++ b/dev/scss/sections/_main-product.scss
@@ -33,6 +33,11 @@
         width: 100%;
         flex-shrink: 0;
       }
+      @include media-breakpoint-down(sm) {
+        // CSS rule to prevent slider of collapsing
+        // when slider was calculationg it's height
+        min-height: calc(100vw - 2rem);
+      }
       @include media-breakpoint-up(md) {
         display: grid;
         grid-template-columns: 1fr;
